force-app/main/default/objects/AbbottPartner__c/AbbottPartner__c.object-meta.xml
<CustomObject>
    <label>Abbott Partner</label>
    <nameField>
        <displayFormat>P-{000000000}</displayFormat>
        <label>Abbott Partner</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Abbott Partners</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>