force-app/main/default/objects/AbbottPartner__c/fields/CallAgent__c.field-meta.xml
<CustomField>
    <fullName>CallAgent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Abbott_Partners</relationshipName>
    <type>Lookup</type>
</CustomField>