force-app/main/default/objects/AbbottPartner__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>City</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value must be with record type City</errorMessage>
        <filterItems>
            <field>Affiliate_Value__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>City</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Affiliate_Value__c</referenceTo>
    <relationshipLabel>Abbott Partners (City)</relationshipLabel>
    <relationshipName>Abbott_Partners1</relationshipName>
    <type>Lookup</type>
</CustomField>