force-app/main/default/objects/AbbottPartner__c/fields/ClinicName__c.field-meta.xml
<CustomField>
    <fullName>ClinicName__c</fullName>
    <label>Clinic Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>