force-app/main/default/objects/AbbottPartner__c/fields/DieticianLead__c.field-meta.xml
<CustomField>
    <fullName>DieticianLead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dietician Lead</label>
    <type>Checkbox</type>
</CustomField>