force-app/main/default/objects/AbbottPartner__c/fields/MC_SG_Sync_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>MC_SG_Sync_Eligibility__c</fullName>
    <formula>ISPICKVAL(Market__c, &apos;SG&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC SG Sync Eligibility</label>
    <type>Checkbox</type>
</CustomField>