force-app/main/default/objects/AbbottPartner__c/fields/OptinPrivacyAndTerms__c.field-meta.xml
<CustomField>
    <fullName>OptinPrivacyAndTerms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt-in Privacy And Terms</label>
    <type>Checkbox</type>
</CustomField>