force-app/main/default/objects/AbbottPartner__c/fields/PartnerCode__c.field-meta.xml
<CustomField>
    <fullName>PartnerCode__c</fullName>
    <label>Partner Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>