force-app/main/default/objects/AbbottPartner__c/fields/PartnerFirstName__c.field-meta.xml
<CustomField>
    <fullName>PartnerFirstName__c</fullName>
    <label>Partner First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>