force-app/main/default/objects/AbbottPartner__c/fields/PartnerID__c.field-meta.xml
<CustomField>
    <fullName>PartnerID__c</fullName>
    <label>Partner ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>