force-app/main/default/objects/AbbottPartner__c/fields/PartnerLastName__c.field-meta.xml
<CustomField>
    <fullName>PartnerLastName__c</fullName>
    <label>Partner Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>