force-app/main/default/objects/AbbottPartner__c/fields/PartnerType__c.field-meta.xml
<CustomField>
    <fullName>PartnerType__c</fullName>
    <label>Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3rd</fullName>
            </value>
            <value>
                <fullName>Cardiologist</fullName>
            </value>
            <value>
                <fullName>Chest Physician</fullName>
            </value>
            <value>
                <fullName>Consultant Physician</fullName>
            </value>
            <value>
                <fullName>Diabetologist</fullName>
            </value>
            <value>
                <fullName>Dietician</fullName>
            </value>
            <value>
                <fullName>Endocrinologist</fullName>
            </value>
            <value>
                <fullName>FB</fullName>
            </value>
            <value>
                <fullName>Gastroenterologist</fullName>
            </value>
            <value>
                <fullName>Gastro Surgeon</fullName>
            </value>
            <value>
                <fullName>General Physician</fullName>
            </value>
            <value>
                <fullName>General Practitioner</fullName>
            </value>
            <value>
                <fullName>General Surgeon</fullName>
            </value>
            <value>
                <fullName>Get to strength</fullName>
            </value>
            <value>
                <fullName>Growth Promoter</fullName>
            </value>
            <value>
                <fullName>Gynaecology</fullName>
            </value>
            <value>
                <fullName>Hospital Dietician</fullName>
            </value>
            <value>
                <fullName>INC</fullName>
            </value>
            <value>
                <fullName>Intensivist</fullName>
            </value>
            <value>
                <fullName>ISP</fullName>
            </value>
            <value>
                <fullName>Nephrologist</fullName>
            </value>
            <value>
                <fullName>Neurologist</fullName>
            </value>
            <value>
                <fullName>Neuro Surgeon</fullName>
            </value>
            <value>
                <fullName>Nutrition Advisor</fullName>
            </value>
            <value>
                <fullName>Nutrition Partner</fullName>
            </value>
            <value>
                <fullName>Oncologist</fullName>
            </value>
            <value>
                <fullName>Onco Surgeon</fullName>
            </value>
            <value>
                <fullName>Orthopaedic Surgeon</fullName>
            </value>
            <value>
                <fullName>Pediatrician</fullName>
            </value>
            <value>
                <fullName>PG Adhoc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>