force-app/main/default/objects/AbbottPartner__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Region</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value must be with record type Region</errorMessage>
        <filterItems>
            <field>Affiliate_Value__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Region</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Affiliate_Value__c</referenceTo>
    <relationshipLabel>Abbott Partners</relationshipLabel>
    <relationshipName>Abbott_Partners</relationshipName>
    <type>Lookup</type>
</CustomField>