force-app/main/default/objects/AbbottPartner__c/fields/RelatedInstitution__c.field-meta.xml
<CustomField>
    <fullName>RelatedInstitution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Institution</label>
    <referenceTo>Institution__c</referenceTo>
    <relationshipLabel>Abbott Partners</relationshipLabel>
    <relationshipName>Abbott_Partners</relationshipName>
    <type>Lookup</type>
</CustomField>