force-app/main/default/objects/AbbottPartner__c/fields/Territory_id__c.field-meta.xml
<CustomField>
    <fullName>Territory_id__c</fullName>
    <label>Territory id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>