force-app/main/default/objects/AbbottPartner__c/fields/ZoneDescription__c.field-meta.xml
<CustomField>
    <fullName>ZoneDescription__c</fullName>
    <label>Zone Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>