force-app/main/default/objects/AbbottPartner__c/recordTypes/Dietician.recordType-meta.xml
<RecordType>
    <fullName>Dietician</fullName>
    <active>true</active>
    <label>Dietician</label>
</RecordType>