force-app/main/default/objects/AbbottPartner__c/recordTypes/Doctor_HCP.recordType-meta.xml
<RecordType>
    <fullName>Doctor_HCP</fullName>
    <active>true</active>
    <label>Doctor/HCP</label>
</RecordType>