force-app/main/default/objects/AbbottPartner__c/recordTypes/Medical_Representative.recordType-meta.xml
<RecordType>
    <fullName>Medical_Representative</fullName>
    <active>true</active>
    <label>Medical Representative</label>
</RecordType>