force-app/main/default/objects/AbbottPartner__c/recordTypes/Nutritional_Advisor_Promoter.recordType-meta.xml
<RecordType>
    <fullName>Nutritional_Advisor_Promoter</fullName>
    <active>true</active>
    <label>Nutritional Advisor / Promoter</label>
</RecordType>