force-app/main/default/objects/AbbottPartner__c/recordTypes/Store_Name.recordType-meta.xml
<RecordType>
    <fullName>Store_Name</fullName>
    <active>true</active>
    <label>Store Name</label>
</RecordType>